opam-version: "2.0"
depends: [
  "0install-solver" {= "2.18"}
  "ANSITerminal" {= "0.8.5"}
  "abstract_algebra" {= "v0.15.0"}
  "accessor" {= "v0.15.0"}
  "accessor_async" {= "v0.15.0"}
  "accessor_base" {= "v0.15.0"}
  "accessor_core" {= "v0.15.0"}
  "aches" {= "1.0.0"}
  "aches-lwt" {= "1.0.0"}
  "agrid" {= "0.1"}
  "alba" {= "0.4.4"}
  "alcotest" {= "1.6.0"}
  "alcotest-async" {= "1.6.0"}
  "alcotest-js" {= "1.6.0"}
  "alcotest-lwt" {= "1.6.0"}
  "alcotest-mirage" {= "1.6.0"}
  "alg_structs" {= "0.1.3"}
  "alonzo" {= "0.4.0"}
  "alsa" {= "0.3.0"}
  "amqp-client" {= "2.2.2"}
  "anders" {= "1.1.1"}
  "angstrom" {= "0.15.0"}
  "angstrom-async" {= "0.15.0"}
  "angstrom-lwt-unix" {= "0.15.0"}
  "angstrom-unix" {= "0.15.0"}
  "ansi" {= "0.5.0"}
  "ansi-parse" {= "0.4.0"}
  "archi" {= "0.2.0"}
  "archi-async" {= "0.2.0"}
  "archi-lwt" {= "0.2.0"}
  "arg-complete" {= "0.1.0"}
  "asetmap" {= "0.8.1+dune2"}
  "astring" {= "0.8.5+dune"}
  "async" {= "v0.15.0"}
  "async_durable" {= "v0.15.0"}
  "async_extra" {= "v0.15.0"}
  "async_find" {= "v0.15.0"}
  "async_inotify" {= "v0.15.0"}
  "async_interactive" {= "v0.15.0"}
  "async_js" {= "v0.15.1"}
  "async_kernel" {= "v0.15.0"}
  "async_rpc_kernel" {= "v0.15.0"}
  "async_sendfile" {= "v0.15.0"}
  "async_shell" {= "v0.15.0"}
  "async_udp" {= "v0.15.0"}
  "async_unix" {= "v0.15.0"}
  "atable" {= "0.1"}
  "atd" {= "2.10.0"}
  "atdgen" {= "2.10.0"}
  "atdgen-codec-runtime" {= "2.10.0"}
  "atdgen-runtime" {= "2.10.0"}
  "atds" {= "2.10.0"}
  "atdts" {= "2.10.0"}
  "atomic" {= "base"}
  "avro" {= "0.1"}
  "avro-compiler" {= "0.1"}
  "aws-config" {= "0.0.1"}
  "bag" {= "1.0.0"}
  "baguette_sharp" {= "2.1.1"}
  "bap-emacs-dot" {= "0.1"}
  "bap-emacs-goodies" {= "0.1"}
  "bap-emacs-mode" {= "0.1"}
  "bap-signatures" {= "2.5.0"}
  "bare_encoding" {= "0.3"}
  "bark" {= "0.1.4"}
  "base" {= "v0.15.1"}
  "base-bigarray" {= "base"}
  "base-bytes" {= "base+dune"}
  "base-native-int63" {= "0.1"}
  "base-threads" {= "base"}
  "base-unix" {= "base"}
  "base32" {= "1.0.0"}
  "base64" {= "3.5.0"}
  "base_bigstring" {= "v0.15.0"}
  "base_quickcheck" {= "v0.15.0"}
  "batch_jaro_winkler" {= "0.1.1"}
  "bechamel" {= "0.3.0"}
  "bechamel-notty" {= "0.3.0"}
  "beluga" {= "1.0"}
  "benchmark" {= "1.6"}
  "bencode" {= "2.0"}
  "bentov" {= "1"}
  "bheap" {= "2.0.0"}
  "bigarray-compat" {= "1.1.0"}
  "bigarray-overlap" {= "0.2.1"}
  "bigdecimal" {= "v0.15.0"}
  "bignum" {= "v0.15.0"}
  "bigstringaf" {= "0.9.0"}
  "bimage" {= "0.6.0"}
  "bin_prot" {= "v0.15.0"}
  "biniou" {= "1.2.2"}
  "binning" {= "0.0.0"}
  "bio_io" {= "0.5.1"}
  "bitlib" {= "1.0"}
  "bitmasks" {= "1.4.0"}
  "bitstring" {= "4.1.0"}
  "bitv" {= "1.6"}
  "bloomf" {= "0.2.0"}
  "bnfgen" {= "3.0.0"}
  "boltzgen" {= "0.9.3"}
  "bos" {= "0.2.1+dune"}
  "box" {= "1.2.0"}
  "bwd" {= "2.1.0"}
  "bwrap" {= "0.1"}
  "bytearray" {= "1.0.3"}
  "bytebuffer" {= "0.0.2"}
  "caisar-nnet" {= "0.1"}
  "caisar-ovo" {= "0.1"}
  "calendar" {= "3.0.0"}
  "calendars" {= "1.0.0"}
  "calipso" {= "4.1.0"}
  "camels" {= "0.0.4"}
  "camlimages" {= "5.0.4-1"}
  "camlix" {= "0.1"}
  "camlon" {= "3.1.0"}
  "camlp-streams" {= "5.0.1"}
  "camlrack" {= "0.10.1"}
  "camltc" {= "0.9.8"}
  "camlzip" {= "1.11+dune"}
  "camomile" {= "1.0.2"}
  "caqti" {= "1.9.0"}
  "caqti-async" {= "1.9.0"}
  "caqti-driver-sqlite3" {= "1.9.0"}
  "caqti-dynload" {= "1.3.0"}
  "caqti-lwt" {= "1.9.0"}
  "caqti-type-calendar" {= "1.9.0"}
  "catapult" {= "0.1.1"}
  "catapult-file" {= "0.1.1"}
  "catapult-sqlite" {= "0.1.1"}
  "cbor" {= "0.5"}
  "cborl" {= "0.1.0"}
  "cdrom" {= "0.9.4"}
  "cfg" {= "2.3.0"}
  "cfgen" {= "1.0"}
  "cfml" {= "20220112"}
  "charInfo_width" {= "1.1.0+dune2"}
  "charset" {= "0.1.0"}
  "chartjs" {= "0.2.2"}
  "chartjs-annotation" {= "0.2.2"}
  "chartjs-colorschemes" {= "0.2.2"}
  "chartjs-datalabels" {= "0.2.2"}
  "chartjs-streaming" {= "0.2.2"}
  "choice" {= "0.4"}
  "chrome-trace" {= "3.6.1"}
  "cinaps" {= "v0.15.1"}
  "clap" {= "0.2.0"}
  "cmdliner" {= "1.1.1+dune"}
  "cmon" {= "0.2"}
  "codept" {= "0.11.1"}
  "coin" {= "0.1.4"}
  "colibrilib" {= "0.3.3"}
  "combinat" {= "3.0"}
  "command_rpc" {= "v0.15.0"}
  "conf-boost" {= "1"}
  "conf-dssi" {= "1"}
  "conf-haveged" {= "1.0.0"}
  "conf-ladspa" {= "1"}
  "conf-lame" {= "1"}
  "conf-libargon2" {= "1"}
  "conf-libgif" {= "1"}
  "conf-liblo" {= "1"}
  "conf-libmagic" {= "1"}
  "conf-lilv" {= "1"}
  "conf-numa" {= "0.1.0"}
  "conf-secp256k1" {= "1.0.0"}
  "conformist" {= "0.8.1"}
  "cookie" {= "0.1.8"}
  "cookies" {= "1.0.0"}
  "coq-native" {= "1"}
  "coq-shell" {= "1"}
  "core" {= "v0.15.1"}
  "core_bench" {= "v0.15.0"}
  "core_compat" {= "v0.15.0"}
  "core_extended" {= "v0.15.0"}
  "core_kernel" {= "v0.15.0"}
  "core_unix" {= "v0.15.2"}
  "cosovo" {= "3"}
  "cppo" {= "1.6.9"}
  "cps_toolbox" {= "0.3"}
  "cpuid" {= "0.1.2"}
  "crlibm" {= "0.5.1"}
  "crontab" {= "0.1"}
  "crunch" {= "3.3.1"}
  "cry" {= "0.6.7"}
  "csexp" {= "1.5.1"}
  "csv" {= "2.4"}
  "csv-lwt" {= "2.4"}
  "csvfields" {= "v0.15.1"}
  "csvtool" {= "2.4"}
  "ctoxml" {= "4.1.0"}
  "cudf" {= "0.10"}
  "cue_sheet_maker" {= "0.1.1"}
  "cumulus" {= "0.0.1"}
  "current_ansi" {= "0.4"}
  "dap" {= "1.0.6"}
  "dates_calc" {= "0.0.4"}
  "debian-formats" {= "0.1.2"}
  "decimal" {= "0.3.0"}
  "delimited_parsing" {= "v0.15.0"}
  "diet" {= "0.4"}
  "directories" {= "0.5"}
  "dispatch" {= "0.5.0"}
  "dispatch-js" {= "0.5.0"}
  "distributed" {= "0.6.0"}
  "distributed-lwt" {= "0.2.0"}
  "dkml-compiler-env" {= "1.0.2~prerel7"}
  "dkml-component-xx-console" {= "0.1.1"}
  "dkml-dune-dsl" {= "0.1.0"}
  "dkml-option-vcpkg" {= "0.1.0"}
  "dkml-runtime-common" {= "1.0.2~prerel7"}
  "dmap" {= "0.5"}
  "docker-api" {= "0.2.2"}
  "dockerfile" {= "8.1.0"}
  "dockerfile-cmd" {= "8.1.0"}
  "dockerfile-opam" {= "8.1.0"}
  "dokeysto" {= "4.0.0"}
  "dokeysto_camltc" {= "4.0.0"}
  "dolmen" {= "0.7"}
  "dolog" {= "6.0.0"}
  "domain-name" {= "0.4.0"}
  "domain_shims" {= "0.1.0"}
  "dssi" {= "0.1.5"}
  "dtoa" {= "0.3.2"}
  "dtools" {= "0.4.4"}
  "dual" {= "0.1.0"}
  "dum" {= "1.0.3"}
  "dune-action-plugin" {= "3.6.1"}
  "dune-build-info" {= "3.6.1"}
  "dune-configurator" {= "3.6.1"}
  "dune-deps" {= "1.3.0"}
  "dune-glob" {= "3.6.1"}
  "dune-private-libs" {= "3.6.1"}
  "dune-rpc" {= "3.6.1"}
  "dune-rpc-lwt" {= "3.6.1"}
  "dune-site" {= "3.6.1"}
  "duration" {= "0.2.1"}
  "dyn" {= "3.6.1"}
  "earley" {= "3.0.0"}
  "easy-format" {= "1.3.4"}
  "easy_logging" {= "0.8.2"}
  "easy_logging_yojson" {= "0.8.2"}
  "ecaml" {= "v0.15.0"}
  "edn" {= "0.2.0"}
  "either" {= "1.0.0"}
  "encore" {= "0.8"}
  "env_config" {= "v0.15.0"}
  "epictetus" {= "3.1.1"}
  "erlang" {= "0.0.14"}
  "expect_test_helpers_async" {= "v0.15.0"}
  "expect_test_helpers_core" {= "v0.15.0"}
  "extlib" {= "1.7.9"}
  "extunix" {= "0.4.1"}
  "ez_hash" {= "0.5.3"}
  "ezgzip" {= "0.2.3"}
  "ezjs_ace" {= "0.1.1"}
  "ezjs_blockies" {= "0.1.1"}
  "ezjs_cleave" {= "0.1.1"}
  "ezjs_crypto" {= "0.1"}
  "ezjs_cytoscape" {= "0.1"}
  "ezjs_d3pie" {= "0.1"}
  "ezjs_extension" {= "0.1"}
  "ezjs_fetch" {= "0.2"}
  "ezjs_idb" {= "0.1.1"}
  "ezjs_jquery" {= "0.1"}
  "ezjs_min" {= "0.3.0"}
  "ezjs_odometer" {= "0.1"}
  "ezjs_qrcode" {= "0.1"}
  "ezjs_recaptcha" {= "0.1.1"}
  "ezjs_timeline" {= "0.1.1"}
  "ezxmlm" {= "1.1.0"}
  "FrontC" {= "4.1.0"}
  "faraday" {= "0.8.2"}
  "faraday-async" {= "0.8.2"}
  "faraday-lwt" {= "0.8.2"}
  "faraday-lwt-unix" {= "0.8.2"}
  "farith" {= "0.1"}
  "fd-send-recv" {= "2.0.1"}
  "fdkaac" {= "0.3.2"}
  "feat" {= "20220407"}
  "feat-core" {= "20220407"}
  "feat-num" {= "20220407"}
  "feather" {= "0.3.0"}
  "feather_async" {= "0.3.0"}
  "fiber" {= "3.6.1"}
  "fieldslib" {= "v0.15.0"}
  "file_path" {= "v0.15.0"}
  "fileutils" {= "0.6.4"}
  "findlib" {= "1.8.1+dune"}
  "fix" {= "20220121"}
  "flex-array" {= "1.2.0"}
  "fmlib" {= "0.5.1"}
  "fmlib_js" {= "0.5.1"}
  "fmlib_parse" {= "0.5.1"}
  "fmlib_pretty" {= "0.5.1"}
  "fmlib_std" {= "0.5.1"}
  "fmt" {= "0.9.0+dune"}
  "fpath" {= "0.7.3+dune"}
  "freetds" {= "0.7"}
  "functoria-runtime" {= "4.3.1"}
  "fuzzy_match" {= "v0.15.0"}
  "fzf" {= "v0.15.0"}
  "gen" {= "1.0"}
  "genspio" {= "0.0.3"}
  "genspir" {= "1.0.1"}
  "geoml" {= "0.1"}
  "github-data" {= "4.4.1"}
  "globlon" {= "1.0"}
  "gmap" {= "0.3.0"}
  "gperftools" {= "0.5"}
  "graphql" {= "0.14.0"}
  "graphql-async" {= "0.14.0"}
  "graphql-lwt" {= "0.14.0"}
  "graphql_parser" {= "0.14.0"}
  "graphql_ppx" {= "1.2.2"}
  "graphv_core" {= "0.1.1"}
  "graphv_core_lib" {= "0.1.1"}
  "graphv_font" {= "0.1.1"}
  "graphv_font_js" {= "0.1.1"}
  "graphv_gles2" {= "0.1.1"}
  "graphv_webgl" {= "0.1.1"}
  "graphv_webgl_impl" {= "0.1.1"}
  "grenier" {= "0.14"}
  "happy-eyeballs" {= "0.3.1"}
  "hardcaml" {= "v0.15.0"}
  "hardcaml_circuits" {= "v0.15.0"}
  "hardcaml_fixed_point" {= "v0.15.0"}
  "hardcaml_of_verilog" {= "v0.15.0"}
  "hardcaml_step_testbench" {= "v0.15.0"}
  "hardcaml_verify" {= "v0.15.0"}
  "hardcaml_waveterm" {= "v0.15.0"}
  "hardcaml_xilinx" {= "v0.15.0"}
  "hardcaml_xilinx_components" {= "v0.15.0"}
  "hashcons" {= "1.3+dune"}
  "headache" {= "1.05"}
  "herdtools7" {= "7.56.2"}
  "hex_encode" {= "v0.15.0"}
  "hexstring" {= "0.2.1"}
  "hg_lib" {= "v0.15.0"}
  "higher_kinded" {= "v0.15.0"}
  "hmap" {= "0.8.1+dune"}
  "htmlfromtexbooks" {= "3.3.2"}
  "http_async" {= "0.2.0"}
  "httpaf" {= "0.7.1"}
  "httpaf-lwt-unix" {= "0.7.1"}
  "httph" {= "0.1"}
  "huffman" {= "0.1.2"}
  "hxd" {= "0.3.2"}
  "ISO8601" {= "0.2.6"}
  "i3ipc" {= "0.4"}
  "icalendar" {= "0.1.7"}
  "idd" {= "0.1"}
  "incr_map" {= "v0.15.0"}
  "incr_select" {= "v0.15.0"}
  "incremental" {= "v0.15.0"}
  "inferno" {= "20220603"}
  "influxdb" {= "0.3.0"}
  "inotify" {= "2.4.1"}
  "inquire" {= "0.3.1"}
  "int_repr" {= "v0.15.0"}
  "integers" {= "0.7.0"}
  "integers_stubs_js" {= "1.0"}
  "integration1d" {= "0.5.1"}
  "interface-prime" {= "0.1"}
  "interface-prime-lwt" {= "0.1"}
  "interval" {= "1.5.1"}
  "interval-map" {= "0.2.0"}
  "interval_base" {= "1.5.1"}
  "interval_crlibm" {= "1.5.1"}
  "interval_intel" {= "1.5.1"}
  "ipaddr" {= "5.3.1"}
  "irc-client" {= "0.7.0"}
  "irc-client-lwt" {= "0.7.0"}
  "irc-client-lwt-ssl" {= "0.7.0"}
  "irc-client-unix" {= "0.7.0"}
  "iso639" {= "0.0.5"}
  "jane-street-headers" {= "v0.15.0"}
  "jemalloc" {= "0.2"}
  "js_of_ocaml" {= "4.1.0"}
  "js_of_ocaml-compiler" {= "4.1.0"}
  "js_of_ocaml-lwt" {= "4.1.0"}
  "js_of_ocaml-ppx" {= "4.1.0"}
  "js_of_ocaml-ppx_deriving_json" {= "4.1.0"}
  "js_of_ocaml-tyxml" {= "4.1.0"}
  "jsonaf" {= "v0.15.0"}
  "jsonm" {= "1.0.1+dune"}
  "jsonrpc" {= "1.14.2"}
  "jsonxt" {= "1.0.1"}
  "jsoo_broadcastchannel" {= "2.0.0"}
  "jsoo_storage" {= "1.0.1"}
  "jst-config" {= "v0.15.1"}
  "junit" {= "2.0.2"}
  "junit_alcotest" {= "2.0.2"}
  "junit_ounit" {= "2.0.2"}
  "kafka" {= "0.5"}
  "kafka_lwt" {= "0.5"}
  "kdl" {= "0.1.0"}
  "kicadsch" {= "0.9.0"}
  "kqueue" {= "0.3.0"}
  "krb" {= "v0.15.0"}
  "ladspa" {= "0.2.2"}
  "lambdasoup" {= "0.7.3"}
  "lame" {= "0.3.6"}
  "landmarks" {= "1.4"}
  "landmarks-ppx" {= "1.4"}
  "lascar" {= "0.7.0"}
  "lazy-trie" {= "1.2.0"}
  "lens" {= "1.2.5"}
  "let-if" {= "0.3.0"}
  "libtensorflow" {= "0.1"}
  "libtorch" {= "1.13.0+linux-x86_64"}
  "libwasmtime" {= "0.22.0+linux-x86_64"}
  "linenoise" {= "1.4.0"}
  "lmdb" {= "1.0"}
  "lo" {= "0.2.0"}
  "logical" {= "0.3.0"}
  "logs" {= "0.7.0+dune2"}
  "logs-async" {= "1.1"}
  "logs-async-reporter" {= "1.0"}
  "logs-ppx" {= "0.2.0"}
  "logs-syslog" {= "0.3.1"}
  "lp" {= "0.4.0"}
  "lpd" {= "1.2.2"}
  "lreplay" {= "0.1"}
  "lru" {= "0.3.1"}
  "lsp" {= "1.14.2"}
  "lua-ml" {= "0.9.4"}
  "lua_parser" {= "1.0.2"}
  "lucid" {= "0.1.5"}
  "lutils" {= "1.54.1"}
  "lwd" {= "0.3"}
  "lwt" {= "5.6.1"}
  "lwt-canceler" {= "0.3"}
  "lwt-dllist" {= "1.0.1"}
  "lwt-exit" {= "1.0"}
  "lwt-watcher" {= "0.2"}
  "lwt_log" {= "1.1.2"}
  "lwt_ppx" {= "2.1.0"}
  "lwt_ppx_let" {= "5.6.0"}
  "lwt_react" {= "1.2.0"}
  "lwt_ssl" {= "1.1.3"}
  "macaddr" {= "5.3.1"}
  "magic-mime" {= "1.3.0"}
  "make-random" {= "0.1"}
  "markup" {= "1.0.3"}
  "markup-lwt" {= "0.5.0"}
  "mccs" {= "1.1+14"}
  "md2mld" {= "0.6"}
  "melange" {= "0.3.2"}
  "melange-compiler-libs" {= "0.0.1-414"}
  "meldep" {= "0.3.2"}
  "mem_usage" {= "0.0.4"}
  "memprof-limits" {= "0.2.0"}
  "memtrace" {= "0.2.3"}
  "menhir" {= "20220210"}
  "menhirLib" {= "20220210"}
  "menhirSdk" {= "20220210"}
  "merge-fmt" {= "0.2"}
  "merlin-extend" {= "0.6.1"}
  "metadb" {= "1.0.2"}
  "metapp" {= "0.4.4"}
  "metaquot" {= "0.5.2"}
  "metrics" {= "0.4.0"}
  "metrics-influx" {= "0.4.0"}
  "metrics-lwt" {= "0.4.0"}
  "metrics-rusage" {= "0.4.0"}
  "mew" {= "0.1.0"}
  "mew_vi" {= "0.5.0"}
  "minicli" {= "5.0.2"}
  "minisat" {= "0.4"}
  "mirage-bootvar-unix" {= "0.1.0"}
  "mirage-clock" {= "4.2.0"}
  "mirage-clock-solo5" {= "4.2.0"}
  "mirage-clock-unix" {= "4.2.0"}
  "mirage-device" {= "2.0.0"}
  "mirage-kv" {= "5.0.0"}
  "mirage-kv-mem" {= "3.1.0"}
  "mirage-no-solo5" {= "1"}
  "mirage-no-xen" {= "1"}
  "mirage-runtime" {= "4.3.1"}
  "mirage-time" {= "3.0.0"}
  "mirage-time-unix" {= "3.0.0"}
  "mirage-unix" {= "5.0.1"}
  "mkocaml" {= "1.2"}
  "mlbdd" {= "0.7.3"}
  "mlfenv" {= "1.0.0"}
  "mlt_parser" {= "v0.15.0"}
  "mm" {= "0.8.1"}
  "mmap" {= "1.2.0"}
  "mmseg" {= "transition"}
  "mock" {= "0.1.1"}
  "mock-ounit" {= "0.1.1"}
  "monaco_jsoo" {= "1.0.1"}
  "monomorphic" {= "2.1.0"}
  "moss" {= "0.1.1"}
  "mparser" {= "1.3"}
  "mparser-re" {= "1.3"}
  "mpp" {= "0.3.5"}
  "msgpck" {= "1.7"}
  "msgpck-repr" {= "1.7"}
  "mtime" {= "1.4.0+dune2"}
  "mula" {= "0.1.2"}
  "multipart-form-data" {= "0.3.0"}
  "murmur3" {= "0.3"}
  "mwt" {= "0.1.0"}
  "nacc" {= "1.0"}
  "node_of_ocaml" {= "1.0.0"}
  "non_empty_list" {= "0.1"}
  "nottui" {= "0.3"}
  "nottui-lwt" {= "0.3"}
  "nottui-pretty" {= "0.3"}
  "notty" {= "0.2.3"}
  "notty_async" {= "v0.15.0"}
  "npy" {= "0.0.9"}
  "num" {= "1.4+dune2"}
  "OCanren-ppx" {= "0.3.0"}
  "obelisk" {= "0.6.0"}
  "obuilder-spec" {= "0.5"}
  "ocal" {= "0.2.2"}
  "ocaml-compiler-libs" {= "v0.12.4"}
  "ocaml-config" {= "2"}
  "ocaml-embed-file" {= "v0.15.0"}
  "ocaml-lua" {= "1.8"}
  "ocaml-makefile" {= "6.39.2"}
  "ocaml-manual" {= "4.14.0"}
  "ocaml-migrate-parsetree" {= "2.4.0"}
  "ocaml-monadic" {= "0.5"}
  "ocaml-print-intf" {= "1.2.0"}
  "ocaml-probes" {= "v0.15.0"}
  "ocaml-protoc" {= "2.3"}
  "ocaml-syntax-shims" {= "1.0.0"}
  "ocaml-systemd" {= "1.3"}
  "ocaml-twt" {= "0.94.0"}
  "ocaml-version" {= "3.5.0"}
  "ocaml-xdg-basedir" {= "transition"}
  "ocaml_intrinsics" {= "v0.15.2"}
  "ocaml_plugin" {= "v0.15.0"}
  "ocamlc-loc" {= "3.6.1"}
  "ocamlcodoc" {= "1.0.1"}
  "ocamlfind" {= "1.8.1+dune"}
  "ocamlformat-rpc-lib" {= "0.24.1"}
  "ocamline" {= "1.2"}
  "ocb" {= "0.2"}
  "ocf" {= "0.8.0"}
  "ocf_ppx" {= "0.8.0"}
  "ockt" {= "0.0.1"}
  "ocolor" {= "1.3.0"}
  "ocp-indent-nlfork" {= "1.5.4"}
  "ocp-ocamlres" {= "0.4+dune2"}
  "ocplib-endian" {= "1.2"}
  "ocplib-json-typed" {= "0.7.1+dune"}
  "ocplib-simplex" {= "0.5"}
  "ocsigen-i18n" {= "4.0.0"}
  "ocsigen-ppx-rpc" {= "1.0"}
  "ocsipersist-lib" {= "1.1.0"}
  "octavius" {= "1.2.2"}
  "odoc-parser" {= "2.0.0"}
  "offheap" {= "0.1.2"}
  "ojs" {= "1.1.1"}
  "omd" {= "2.0.0~alpha2"}
  "opam-0install-cudf" {= "0.4.3"}
  "opam-monorepo" {= "0.3.4"}
  "openapi_router" {= "0.1.0"}
  "openQASM" {= "0.4.0"}
  "opentelemetry" {= "0.3"}
  "opomodoro" {= "0.0.2"}
  "optal" {= "0.3"}
  "opti" {= "1.0.3"}
  "optimization1d" {= "0.6.1"}
  "optiml-transport" {= "0.0.1"}
  "order-i3-xfce" {= "0.1"}
  "ordering" {= "3.6.1"}
  "ordinal" {= "1.1"}
  "orec" {= "1.0.1"}
  "orewa" {= "0.2.1"}
  "osc" {= "0.2.0"}
  "osc-unix" {= "0.2.0"}
  "otf" {= "0.1"}
  "otoml" {= "1.0.3"}
  "ounit" {= "2.2.6"}
  "ounit-lwt" {= "2.2.6"}
  "ounit2" {= "2.2.6"}
  "ounit2-lwt" {= "2.2.6"}
  "owee" {= "0.6"}
  "owl-base" {= "1.0.2"}
  "owl-ode-base" {= "0.5.0"}
  "owork" {= "0.1.1"}
  "p4pp" {= "0.1.12"}
  "packstream" {= "0.1"}
  "pacomb" {= "1.1"}
  "pandoc" {= "0.1.0"}
  "pandoc-abbreviations" {= "0.1.0"}
  "pandoc-crossref" {= "0.1.0"}
  "pandoc-include" {= "0.1.0"}
  "pandoc-inspect" {= "0.1.0"}
  "papi" {= "0.1.1"}
  "parmap" {= "1.2.5"}
  "parse-argv" {= "0.2.0"}
  "parsexp" {= "v0.15.0"}
  "parsexp_io" {= "v0.15.0"}
  "parsley" {= "0.0.1"}
  "path_glob" {= "0.2"}
  "patience_diff" {= "v0.15.0"}
  "pbrt" {= "2.3"}
  "phantom-algebra" {= "1.0.1"}
  "phonetic" {= "0.1.0"}
  "pla" {= "2.1"}
  "plateau" {= "0.1"}
  "plato" {= "1.1.2"}
  "plist-xml" {= "0.3.0"}
  "plist-xml-lwt" {= "0.3.0"}
  "poll" {= "0.3.0"}
  "pomap" {= "4.1.1"}
  "popper" {= "0.1.1"}
  "posixat" {= "v0.15.0"}
  "postgres_async" {= "v0.15.0"}
  "pp" {= "1.1.2"}
  "pp-binary-ints" {= "1.0.0"}
  "pp_loc" {= "2.1.0"}
  "pprint" {= "20220103"}
  "ppx-owl-opt" {= "0.0.1"}
  "ppx_accessor" {= "v0.15.0"}
  "ppx_assert" {= "v0.15.0"}
  "ppx_base" {= "v0.15.0"}
  "ppx_bench" {= "v0.15.0"}
  "ppx_bin_prot" {= "v0.15.0"}
  "ppx_bitstring" {= "4.1.0"}
  "ppx_blob" {= "0.7.2"}
  "ppx_camlrack" {= "0.10.1"}
  "ppx_catch" {= "0.1.0"}
  "ppx_cold" {= "v0.15.0"}
  "ppx_compare" {= "v0.15.0"}
  "ppx_compose" {= "0.2.1"}
  "ppx_const" {= "2.0.1"}
  "ppx_conv_func" {= "v0.15.0"}
  "ppx_counters" {= "0.1"}
  "ppx_css" {= "v0.15.1"}
  "ppx_csv_conv" {= "v0.15.0"}
  "ppx_custom_printf" {= "v0.15.0"}
  "ppx_defer" {= "0.5.0"}
  "ppx_derivers" {= "1.2.1"}
  "ppx_deriving" {= "5.2.1"}
  "ppx_deriving_hardcaml" {= "v0.15.0"}
  "ppx_deriving_hash" {= "0.1.1"}
  "ppx_deriving_jsoo" {= "0.2"}
  "ppx_deriving_popper" {= "0.1.1"}
  "ppx_deriving_protobuf" {= "3.0.0"}
  "ppx_deriving_protocol" {= "0.8.1"}
  "ppx_deriving_qcheck" {= "0.3.0"}
  "ppx_deriving_rpc" {= "9.0.0"}
  "ppx_deriving_scad" {= "1.0.0"}
  "ppx_deriving_yojson" {= "3.7.0"}
  "ppx_disable_unused_warnings" {= "v0.15.0"}
  "ppx_distr_guards" {= "0.3"}
  "ppx_enumerate" {= "v0.15.0"}
  "ppx_expect" {= "v0.15.1"}
  "ppx_factory" {= "0.2.0"}
  "ppx_fields_conv" {= "v0.15.0"}
  "ppx_fixed_literal" {= "v0.15.0"}
  "ppx_gen_rec" {= "2.0.0"}
  "ppx_getenv" {= "2.1"}
  "ppx_hash" {= "v0.15.0"}
  "ppx_here" {= "v0.15.0"}
  "ppx_ignore_instrumentation" {= "v0.15.0"}
  "ppx_import" {= "1.10.0"}
  "ppx_inline_alcotest" {= "1.0.0"}
  "ppx_inline_test" {= "v0.15.0"}
  "ppx_jane" {= "v0.15.0"}
  "ppx_js_style" {= "v0.15.0"}
  "ppx_jsonaf_conv" {= "v0.15.1"}
  "ppx_let" {= "v0.15.0"}
  "ppx_log" {= "v0.15.0"}
  "ppx_make" {= "0.3.0"}
  "ppx_map" {= "0.1.0"}
  "ppx_matches" {= "0.1"}
  "ppx_meta_conv" {= "4.1.0"}
  "ppx_module_timer" {= "v0.15.0"}
  "ppx_monad" {= "0.2.0"}
  "ppx_monoid" {= "0.3.3"}
  "ppx_optcomp" {= "v0.15.0"}
  "ppx_optional" {= "v0.15.0"}
  "ppx_pattern_bind" {= "v0.15.0"}
  "ppx_pipebang" {= "v0.15.0"}
  "ppx_protocol_conv" {= "5.2.0"}
  "ppx_protocol_conv_msgpack" {= "5.2.0"}
  "ppx_protocol_conv_xmlm" {= "5.2.0"}
  "ppx_pyformat" {= "0.1.2"}
  "ppx_regexp" {= "0.5.1"}
  "ppx_seq" {= "0.3.2"}
  "ppx_sexp_conv" {= "v0.15.1"}
  "ppx_sexp_message" {= "v0.15.0"}
  "ppx_sexp_value" {= "v0.15.0"}
  "ppx_show" {= "0.2.1"}
  "ppx_stable" {= "v0.15.0"}
  "ppx_string" {= "v0.15.0"}
  "ppx_string_interpolation" {= "1.0.1"}
  "ppx_system" {= "1.0"}
  "ppx_test" {= "1.8.0"}
  "ppx_tools" {= "6.6"}
  "ppx_ts" {= "0.1.6"}
  "ppx_type_directed_value" {= "v0.15.0"}
  "ppx_typed_fields" {= "v0.15.0"}
  "ppx_typerep_conv" {= "v0.15.0"}
  "ppx_units" {= "1.0.0"}
  "ppx_variants_conv" {= "v0.15.0"}
  "ppx_viewpattern" {= "0.1.0"}
  "ppx_xml_conv" {= "v0.15.0"}
  "ppx_yojson_conv" {= "v0.15.1"}
  "ppx_yojson_conv_lib" {= "v0.15.0"}
  "ppxlib" {= "0.28.0"}
  "ppxx" {= "2.5.0"}
  "pratter" {= "2.0.0"}
  "prbnmcn-basic-structures" {= "0.0.1"}
  "prbnmcn-cgrph" {= "0.0.2"}
  "prbnmcn-clustering" {= "0.0.1"}
  "prbnmcn-dagger" {= "0.0.2"}
  "prbnmcn-ucb1" {= "0.0.2"}
  "pringo" {= "1.3+dune2"}
  "printbox" {= "0.6.1"}
  "printbox-html" {= "0.6.1"}
  "proc-smaps" {= "0.1.0"}
  "processor" {= "0.1"}
  "profunctor" {= "v0.15.0"}
  "prometheus" {= "1.2"}
  "promise" {= "1.1.2"}
  "protocol_version_header" {= "v0.15.0"}
  "proverifdoc" {= "2.04"}
  "psq" {= "0.2.1"}
  "ptime" {= "1.0.0+dune2"}
  "ptmap" {= "2.0.5"}
  "ptset" {= "1.0.1"}
  "pure-splitmix" {= "0.3"}
  "pvec" {= "0.1.1"}
  "pyre-ast" {= "0.1.9"}
  "qbf" {= "0.3"}
  "qcheck" {= "0.20"}
  "qcheck-alcotest" {= "0.20"}
  "qcheck-core" {= "0.20"}
  "qcheck-ounit" {= "0.20"}
  "qinap" {= "1.0"}
  "qmp" {= "0.19.0"}
  "qrencode" {= "0.2"}
  "qtest" {= "2.11.2"}
  "radamsa" {= "0.2"}
  "range" {= "0.8.3"}
  "rdbg" {= "1.199.0"}
  "re" {= "1.10.4"}
  "rea" {= "1.0.0"}
  "react" {= "1.2.2+dune"}
  "reactiveData" {= "0.3.0"}
  "reanalyze" {= "2.23.0"}
  "reason" {= "3.8.2"}
  "record_builder" {= "v0.15.0"}
  "redirect" {= "0.2.1"}
  "redis" {= "0.6"}
  "redis-async" {= "v0.15.0"}
  "reedsolomon" {= "0.3"}
  "res" {= "5.0.1"}
  "resource-pooling" {= "1.2"}
  "resource_cache" {= "v0.15.0"}
  "resp" {= "0.11.0"}
  "resp-client" {= "0.11.0"}
  "resp-server" {= "0.11.0"}
  "result" {= "1.5"}
  "rfc7748" {= "1.0"}
  "rhythm" {= "0.0.1"}
  "ringo" {= "1.0.0"}
  "rock" {= "0.20.0"}
  "roman" {= "0.2"}
  "root1d" {= "0.5.1"}
  "rope" {= "0.6.2"}
  "rosa" {= "0.2.0"}
  "rosetta" {= "0.3.0"}
  "rpc_parallel" {= "v0.15.0"}
  "rpclib" {= "9.0.0"}
  "rpclib-async" {= "9.0.0"}
  "rpclib-js" {= "9.0.0"}
  "rpclib-lwt" {= "9.0.0"}
  "rresult" {= "0.7.0+dune"}
  "rss" {= "3.0"}
  "rungen" {= "0.0.1"}
  "rusage" {= "1.0.0"}
  "safepass" {= "3.1"}
  "sanddb" {= "0.3.0"}
  "scad_ml" {= "1.1.0"}
  "scgi" {= "1.0"}
  "searchTree" {= "0.1"}
  "sedlex" {= "3.0"}
  "sek" {= "20201012"}
  "semaphore-compat" {= "1.0.1"}
  "semver2" {= "1.2.0"}
  "seq" {= "base+dune"}
  "sequencer_table" {= "v0.15.0"}
  "serial" {= "0.0.2"}
  "sexp_decode" {= "0.7"}
  "sexp_diff" {= "v0.15.0"}
  "sexp_grammar" {= "v0.15.0"}
  "sexp_macro" {= "v0.15.0"}
  "sexp_pretty" {= "v0.15.1"}
  "sexp_select" {= "v0.15.0"}
  "sexp_string_quickcheck" {= "v0.15.0"}
  "sexplib" {= "v0.15.1"}
  "sexplib0" {= "v0.15.1"}
  "sha" {= "1.15.2"}
  "shared-secret" {= "0.4"}
  "shell" {= "v0.15.0"}
  "shexp" {= "v0.15.0"}
  "shuttle" {= "0.6.0"}
  "simlog" {= "0.0.3"}
  "simple63" {= "1"}
  "smart-print" {= "0.3.0"}
  "smol" {= "0.0.1"}
  "smol-helpers" {= "0.0.1"}
  "smtlib-utils" {= "0.4"}
  "sortedseq_intersect" {= "0.2.0"}
  "spawn" {= "v0.15.1"}
  "spdx_licenses" {= "1.1.0"}
  "splay_tree" {= "v0.15.0"}
  "splittable_random" {= "v0.15.0"}
  "spotlib" {= "4.3.0"}
  "sqlite3" {= "5.1.0"}
  "sqlite3_utils" {= "0.5"}
  "ssl" {= "0.5.13"}
  "stdcompat" {= "19"}
  "stdint" {= "0.7.2"}
  "stdint-literals" {= "1.0"}
  "stdio" {= "v0.15.0"}
  "stdlib-diff" {= "0.1.3"}
  "stdlib-shims" {= "0.3.0"}
  "stdune" {= "3.6.1"}
  "streaming" {= "0.8.0"}
  "string_dict" {= "v0.15.0"}
  "stringext" {= "1.6.0"}
  "subtype-refinement" {= "0.2"}
  "swhid_core" {= "0.1"}
  "swhid_types" {= "0.1"}
  "syslog" {= "2.0.2"}
  "syslog-message" {= "1.1.0"}
  "syslog-rfc5424" {= "0.1"}
  "tcalc" {= "1.0.1"}
  "tdigest" {= "2.0.0"}
  "tensorboard" {= "0.0.1"}
  "terminal_size" {= "0.2.0"}
  "testu01" {= "1.2.3-0.2"}
  "textutils" {= "v0.15.0"}
  "textutils_kernel" {= "v0.15.0"}
  "textwrap" {= "0.2.1"}
  "tezos-hacl-glue" {= "12.3"}
  "tezos-protocol-environment-packer" {= "12.3"}
  "tezos-sapling-parameters" {= "1.0.0"}
  "thrift" {= "0.10.0"}
  "tidy" {= "5.6-0.1"}
  "tidy_email" {= "0.0.1"}
  "time_now" {= "v0.15.0"}
  "timed" {= "1.1"}
  "timedesc-tzdb" {= "0.9.1"}
  "timedesc-tzlocal" {= "0.9.1"}
  "timedesc-tzlocal-js" {= "0.9.1"}
  "timezone" {= "v0.15.0"}
  "tiny_httpd" {= "0.12"}
  "tiny_httpd_camlzip" {= "0.12"}
  "toc" {= "0.1.0"}
  "tofn" {= "0.12"}
  "toplevel_backend" {= "v0.15.1"}
  "toplevel_expect_test" {= "v0.15.1"}
  "topological_sort" {= "v0.15.0"}
  "tqdm" {= "0.1"}
  "tracing" {= "v0.15.0"}
  "traits" {= "0.1.0"}
  "transept" {= "0.1.0"}
  "traverse" {= "0.3.0"}
  "travesty" {= "0.7.2"}
  "trax" {= "0.4.0"}
  "treeprint" {= "2.3.0"}
  "trie" {= "1.0.0"}
  "tsort" {= "2.1.0"}
  "tube" {= "4.4.0"}
  "tuntap" {= "2.0.0"}
  "tyabt" {= "0.1.0"}
  "typerep" {= "v0.15.0"}
  "typeset" {= "0.4"}
  "tyre" {= "0.5"}
  "tyxml" {= "4.5.0"}
  "tyxml-jsx" {= "4.5.0"}
  "tyxml-lwd" {= "0.3"}
  "tyxml-ppx" {= "4.5.0"}
  "tyxml-syntax" {= "4.5.0"}
  "ubase" {= "0.05"}
  "ubpf" {= "0.2"}
  "uchar" {= "0.0.2+dune2"}
  "uint" {= "2.0.1"}
  "unidecode" {= "0.4.0"}
  "unionFind" {= "20220122"}
  "uri" {= "4.2.0"}
  "uri-re" {= "4.2.0"}
  "uri-sexp" {= "4.2.0"}
  "uritemplate" {= "0.2.0"}
  "username_kernel" {= "v0.15.0"}
  "uuidm" {= "0.9.8+dune"}
  "uutf" {= "1.0.3+dune"}
  "uuuu" {= "0.3.0"}
  "validator" {= "0.2.3"}
  "variantslib" {= "v0.15.0"}
  "vcaml" {= "v0.15.0"}
  "vec" {= "0.3.0"}
  "vector" {= "1.0.0"}
  "vector3" {= "1.0.0"}
  "visitors" {= "20210608"}
  "vlq" {= "0.2.1"}
  "vocal" {= "0.1"}
  "voqc" {= "0.3.0"}
  "vpt" {= "5.0.0"}
  "vue-jsoo" {= "0.2"}
  "webbrowser" {= "0.6.1+dune"}
  "webtest" {= "2.0.0"}
  "webtest-js" {= "2.0.0"}
  "wikitext" {= "3.0.1"}
  "win-error" {= "1.0"}
  "win-eventlog" {= "0.4"}
  "wseg" {= "0.3.0"}
  "wtf8" {= "1.0.2"}
  "xapi-backtrace" {= "0.7"}
  "xapi-inventory" {= "1.2.3"}
  "xapi-stdext-date" {= "4.21.0"}
  "xapi-stdext-encodings" {= "4.21.0"}
  "xapi-stdext-pervasives" {= "4.21.0"}
  "xapi-stdext-std" {= "4.21.0"}
  "xapi-stdext-threads" {= "4.21.0"}
  "xapi-stdext-unix" {= "4.21.0"}
  "xapi-stdext-zerocheck" {= "4.21.0"}
  "xdg" {= "3.6.1"}
  "xdg-basedir" {= "0.0.4"}
  "xen-evtchn" {= "2.1.0"}
  "xmelly" {= "1.0.0"}
  "xmldiff" {= "0.7.0"}
  "xmldiff_js" {= "0.7.0"}
  "xmlm" {= "1.4.0+dune"}
  "xmlplaylist" {= "0.1.5"}
  "xoshiro" {= "0.1"}
  "yojson" {= "2.0.2"}
  "yuscii" {= "0.3.0"}
  "zarith" {= "1.12+dune"}
  "zarith_stubs_js" {= "v0.15.0"}
  "zelus" {= "2.2"}
  "zip" {= "1.11+dune"}
  "zlib" {= "0.6"}
  "zlist" {= "0.5.0"}
  "zxcvbn" {= "2.4+1"}
]
